[tool.poetry]
name = "yapom"
version = "0.1.0"
description = ""
authors = ["sshukla90 <sshukla90@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nornir = "^3.4.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
